--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like1"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -124,7 +124,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like2"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -143,7 +143,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like3"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -162,7 +162,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like4"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -181,7 +181,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like5"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -200,7 +200,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like6"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -252,7 +252,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like7"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -271,7 +271,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like8"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -290,7 +290,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like9"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
@@ -309,7 +309,7 @@
                         </div>
                         <div class="collection__card-footer">
                             <div>
-                                <i class="fa-solid fa-heart" id="like10"></i>
+                                <i class="fa-solid fa-heart"></i>
                                 <i class="fa-solid fa-folder-plus"></i>
                             </div>
                             <a href="#" class="main__subtitle">Visit</a>
